--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                </div>
                <div class="navbar">
                   <ul>
-                     <li><a href="#home" class="active">Home</a></li>
+                     <li><a href="#home" class="active">abhishek</a></li>
                      <li><a href="#about">About</a></li>
                      <li><a href="#services">Services</a></li>
                      <li><a href="#portfolio">Portfolio</a></li>
